--- a/phoenixfamily_site/app/views/layouts/_footer.html.erb
+++ b/phoenixfamily_site/app/views/layouts/_footer.html.erb
@@ -1,28 +1,25 @@
-<div id="footer">
+<footer style="background-color: #ccc"><!-- TODO: Use stylesheet -->
   <div class="container">
+    <h4>Footer</h4>
 
-    <div class="row footer-first-row">
+    <div class="row">
+      <ul class="col-xs-12 col-md-4">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
 
-      <div class="col-xs-12 text-center">
-        <p><small>
-          &copy; <%= Time.now.year %> - Yourself!
-          <br/>
-          Assembled with <%= link_to "RailsBricks", "http://www.railsbricks.net" %>
-        </small></p>
-      </div>
+      <ul class="col-xs-12 col-md-4">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
 
+      <ul class="col-xs-12 col-md-4">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
     </div>
-
   </div>
-</div>
-<% if Rails.env == "production" %>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-2350187-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-<% end %>
+</footer>
