--- a/phoenixfamily_site/app/assets/stylesheets/application.scss
+++ b/phoenixfamily_site/app/assets/stylesheets/application.scss
@@ -1,6 +1,10 @@
 /*
  * Overwritten by RailsBricks
- *
- *= require_self
  */
+@import "colors";
 @import "railsbricks_custom";
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+@import "base";
