--- a/phoenixfamily_site/app/views/layouts/_navigation.html.erb
+++ b/phoenixfamily_site/app/views/layouts/_navigation.html.erb
@@ -7,11 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Phoenix Family</a>
+      <%= link_to image_tag('phoenix_family.png'), root_path %>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <%= render 'layouts/navigation_links' %>
       </ul>
