--- a/phoenixfamily_site/app/views/layouts/application.html.erb
+++ b/phoenixfamily_site/app/views/layouts/application.html.erb
@@ -9,13 +9,29 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-  <body>
+<body>
+  <div id="wrap">
+    <header>
+      <%= render 'layouts/navigation' %>
+      <div class="secondary-nav-bar"></div>
+    </header>
+
     <div class="container">
 
-      <%= render 'layouts/navigation' %>
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3 text-center">
+          <%= render 'layouts/messages' %>
+        </div>
+      </div>
 
-      <%= yield %>
-    </div><!--/.container-->
+      <div class="row">
+        <div class="col-sm-12">
+          <%= yield %>
+        </div>
+      </div>
+
+    </div>
+  </div>
 
     <%= render 'layouts/footer' %>
 
