Add in the primary navigation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,11 @@
 /*
  * Overwritten by RailsBricks
  *
- *= require_self
  */
+@import "colors";
 @import "railsbricks_custom";
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+@import "base";
