--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <div id="wrap">
     <header>
       <%= render 'layouts/navigation' %>
+      <div class="secondary-nav-bar"></div>
     </header>
 
     <div class="container">
