Revert "Add in the primary navigation"
This reverts commit ea18cf837c97ad3b1ecc06ebcb6e1f827c1c9ded.

--- a/app/assets/stylesheets/railsbricks_custom.scss
+++ b/app/assets/stylesheets/railsbricks_custom.scss
@@ -135,11 +135,11 @@ $navbar-border-radius: 0px;
 
 // Navbar: Default navbar
 // -> Basics
-$navbar-default-color: $primary-color;
-$navbar-default-bg: #ffffff;
-$navbar-default-border: none;
+$navbar-default-color: #777777;
+$navbar-default-bg: #f8f8f8;
+$navbar-default-border: darken($navbar-default-bg, 7%);
 // -> Links
-$navbar-default-link-color: #962048;
+$navbar-default-link-color: #777777;
 $navbar-default-link-hover-color: #333333;
 $navbar-default-link-hover-bg: $navbar-default-bg;
 $navbar-default-link-active-color: #555555;
