--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,9 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to image_tag('phoenix_family.png'), root_path %>
+      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
     </div>
-    <div class="collapse navbar-collapse navbar-right">
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
       </ul>
